# CNes

./: .gitignore  CMakeLists.txt  LICENSE  cart.c  cnes_window.c  cnes_window.h  cpu.c  driver.c  ines.h  main.c  mem.c  nes.c  nes_cart.c  nes_cart.h  nes_cpu.c  nes_cpu.h  nes_mem.c  nes_mem.h  nes_ppu.c  nes_ppu.h  ppu.c  types.h  util.c  window.c
include/: apu.h  args.h  cart.h  cpu.h  mapper.h  mem.h  nes.h  ppu.h  types.h  util.h  window.h
src/: apu.c  args.c  cart.c  cpu.c  main.c  mappers.c  mem.c  nes.c  ppu.c  util.c  window.c
src/include/: apu.h  args.h  cart.h  cpu.h  mappers.h  nes.h  ppu.h  types.h  util.h  window.h
src/mappers/: axrom.c  mmc1.c  nrom.c
